ghc-4335c07/testsuite/tests/typecheck/should_compile/T9569a.hs
{-# LANGUAGE RankNTypes #-}
module T9569a where

g :: (Int -> Int) -> Int
g f = f 4

f1 :: (forall a. a -> a) -> Int
f1 = g

f2 :: (forall a. a -> a) -> Int
f2 x = g x
