ghc-4335c07/testsuite/tests/typecheck/should_fail/tcfail197.hs
{-# LANGUAGE RankNTypes #-}

module ShouldFail where

foo :: [forall a. a] -> Int
foo = error "urk"

